Прогноз на несколько дней вперед и т.д

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <label for="city">Ваш город:</label>
         <select class="city" name="city" id="city">
             <option value="Moscow">Москва</option>
+            <option value="Rostov-on-Don">Ростов-на-Дону</option>
+            <option value="Krasnodar">Краснодар</option>
+            <option value="">Екатеринбург</option>
+            <option value="">Владивосток</option>
+            <option value="">Самара</option>
+            <option value="">Казань</option>
         </select>
 
     </div>
@@ -25,6 +31,39 @@
     <div class="days_contain">
         <div class="day_contain">
             <p class='city_name'>City name</p>
+            <p class="date">Дата</p>
+            <p class="temperature">10&deg;</p>
+            <p class="description">description</p>
+            <img class="w_icon" src="">
+            <p class="wind"></p>
+        </div>
+        <div class="day_contain">
+            <p class='city_name'>City name</p>
+            <p class="date">Дата</p>
+            <p class="temperature">10&deg;</p>
+            <p class="description">description</p>
+            <img class="w_icon" src="">
+            <p class="wind"></p>
+        </div>
+        <div class="day_contain">
+            <p class='city_name'>City name</p>
+            <p class="date">Дата</p>
+            <p class="temperature">10&deg;</p>
+            <p class="description">description</p>
+            <img class="w_icon" src="">
+            <p class="wind"></p>
+        </div>
+        <div class="day_contain">
+            <p class='city_name'>City name</p>
+            <p class="date">Дата</p>
+            <p class="temperature">10&deg;</p>
+            <p class="description">description</p>
+            <img class="w_icon" src="">
+            <p class="wind"></p>
+        </div>
+        <div class="day_contain">
+            <p class='city_name'>City name</p>
+            <p class="date">Дата</p>
             <p class="temperature">10&deg;</p>
             <p class="description">description</p>
             <img class="w_icon" src="">
