Select заменен на Radio b.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!--
     <div class="city_change">
         <label for="city">Ваш город:</label>
         <select class="city" name="city" id="city">
@@ -27,7 +28,30 @@
         </select>
 
     </div>
-
+-->
+    <form>
+        <div class="city_change">
+            <h3 class="title">
+                Ваш город:
+            </h3>
+            <input class="city" id="r0" type="radio" value="Moscow" name="selectName">
+            <label for="r0">Москва</label>
+            <input class="city" id="r1" type="radio" value="Krasnodar" name="selectName">
+            <label for="r1">Краснодар</label>
+            <input class="city" id="r2" type="radio" value="Volgograd" name="selectName">
+            <label for="r2">Волгоград</label>
+            <input class="city" id="r3" type="radio" value="Kazan" name="selectName">
+            <label for="r3">Казань</label>
+            <input class="city" id="r4" type="radio" value="Voronezh" name="selectName">
+            <label for="r4">Воронеж</label>
+            <input class="city" id="r5" type="radio" value="Tambov" name="selectName">
+            <label for="r5">Тамбов</label>
+            <input class="city" id="r6" type="radio" value="Stavropol" name="selectName">
+            <label for="r6">Ставрополь</label>
+            <input class="city" id="r7" type="radio" value="Rostov-on-Don" name="selectName">
+            <label for="r7">Ростов-на-Дону</label>
+        </div>
+    </form>
     <div class="days_contain">
         <div class="day_contain">
             <p class='city_name'>City name</p>
