Удаление лишних изобр., fix путей

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Ubuntu:wght@500&display=swap"
@@ -14,21 +14,6 @@
 </head>
 
 <body>
-    <!--
-    <div class="city_change">
-        <label for="city">Ваш город:</label>
-        <select class="city" name="city" id="city">
-            <option value="Moscow">Москва</option>
-            <option value="Rostov-on-Don">Ростов-на-Дону</option>
-            <option value="Krasnodar">Краснодар</option>
-            <option value="">Екатеринбург</option>
-            <option value="">Владивосток</option>
-            <option value="">Самара</option>
-            <option value="">Казань</option>
-        </select>
-
-    </div>
--->
     <form>
         <div class="city_change">
             <h3 class="title">
@@ -96,7 +81,7 @@
 
     </div>
 
-    <script src='/script.js'></script>
+    <script src='script.js'></script>
 </body>
 
 </html>
